--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>co.edu.uniandes.dse</groupId>
-	<artifactId>sXXX_ZZZ</artifactId>
+	<artifactId>ISIS2603_202310_S2_E4_Gym_Back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>sXXX_ZZZ</name>
+	<name>ISIS2603_202310_S2_E4_Gym_Back</name>
 	<description>Course Project for ISIS2603</description>
 	<properties>
 		<java.version>11</java.version>
