--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
 							</commandlineArgs>
 						</configuration>
 					</execution>
-					<execution>
+					<!--<execution>
 						<id>integration-tests-composed-collection</id>
 						<phase>integration-test</phase>
 						<goals>
@@ -148,7 +148,7 @@
 								run it/composed.collection.json -e collections/EntornoIT.postman_environment.json
 							</commandlineArgs>
 						</configuration>
-					</execution>
+					</execution> -->
 				</executions>
 			</plugin>
 		</plugins>
